--- a/index.html
+++ b/index.html
@@ -74,25 +74,29 @@
       </section>
       <section>
         <section>
-        <h2>Things you should really know about Jmaes Madison</h2>
+        <h2>Things you should really know about James Madison</h2>
         </section>
         <section>
-         <h3>He was the father of the constitution.</h3>
+         <h3>He was the father of the Constitution.</h3>
         </section>
         <section>
-        <h3>was elected to the newly formed U.S. House of Representatives, where he served from 1789 to 1797. In Congress, he worked to draft the Bill of Rights.
+        <h3>He was elected to the newly formed U.S. House of Representatives, where he served from 1789 to 1797. In Congress, he worked to draft the Bill of Rights.
         </h3>
         </section>
         <section>
-          <h3>He signed Macon’s Bill Number Two into law in 1810.This law essentially set the stage for the War of 1812. Due to increasing disregard for U.S. neutrality in the French-British conflict and a call for military action from new members of Congress.
+          <h3>He signed Macon’s Bill Number Two into law in 1810. This law essentially set the stage for the War of 1812. Due to increasing disregard for U.S. neutrality in the French-British conflict and a call for military action from new members of Congress.
 </h3>
         </section>
         <section><h3>He lead the United States in the war of 1812 against Great Britain and after he served two terms he retired from his presidency and moved back to his plantation in Virginia.</h3>
 </section>
 <section>
-  <h3>Louisiana (1812) and Kentucky (1816) joined the United States while He was in office.</h3>
+  <h3>Louisiana (1812) and Kentucky (1816) joined the United States while he was in office.</h3>
 </section>
       </section>
+      <section>
+      <iframe  data-autoplay class="stretch" src="https://www.youtube-nocookie.com/embed/EivTHLKaa9s?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+      </section>
+        
 
     </div>
 
