--- a/index.html
+++ b/index.html
@@ -93,8 +93,10 @@
   <h3>Louisiana (1812) and Kentucky (1816) joined the United States while he was in office.</h3>
 </section>
       </section>
-      <section>
-      <iframe  data-autoplay class="stretch" src="https://www.youtube-nocookie.com/embed/EivTHLKaa9s?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+      <section class="stretch" data-background-video="video/bio.mp4">
+      </section>
+      <section data-background="img/James_Madison.jpg">
+        
       </section>
         
 
