--- a/test/index.html
+++ b/test/index.html
@@ -129,7 +129,7 @@ label {
       <input class="with-gap" name="entry.1219999632" value="No" id="group_1219999632_1" type="radio"/>
       <label for="group_1219999632_1">No</label>
     </p>
-    <div class="white-text">Did James Madison Introduce the idea of Checks and Balances?</div>
+    <div class="white-text">Did James Madison introduce the idea of Checks and Balances?</div>
 <p>
       <input class="with-gap" name="entry.486375789" value="Yes" id="group_486375789_1" type="radio"/>
       <label for="group_486375789_1">Yes</label>
@@ -147,7 +147,7 @@ label {
       <input class="with-gap" name="entry.989730994" value="No" id="group_989730994_2" type="radio"/>
       <label for="group_989730994_2">No</label>
     </p>
-    <div class="white-text">What is James Madiso known as being?</div>
+    <div class="white-text">What is James Madison known as being?</div>
  <p>
       <input type="radio" class="with-gap" name="entry.399846943" value="The Midnight Rider" id="group_399846943_1"/>
       <label for="group_399846943_1">The Midnight Rider</label>
