--- a/smartboard.html
+++ b/smartboard.html
@@ -45,7 +45,8 @@
     <!-- Any section element inside of this container is displayed as a slide -->
     <div class="slides">
     <section>
-      <h2>The presentation will begin shortly....</h2>
+      <h3>Please go to the following url (website) on your device:</h3>
+      <h1 style="text-decoration:underline; font-size:3.5em;">history.vths.info</h1>
     </section>
       <section>
       <aside class="notes">
