--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         mouseWheel: false,
         			progress: false,
         			keyboard: false,
-    				controls: true,
+    				controls: false,
     				touch: false,
     				transition: 'convex', // none/fade/slide/convex/concave/zoom
     
