added no audi ovideo so no overlapping audio

--- a/index.html
+++ b/index.html
@@ -124,10 +124,9 @@
         <p>Louisiana (1812) and Kentucky (1816) joined the United States while he was in office. He served two terms then retired from his presidency and moved back to his plantation in Virginia.</p>
       </section>
       <section>
-        <audio data-autoplay src="audio/theme.mp3"></audio>
         <h2>Our Theme Song</h2>
       </section>
-      <section class="stretch" data-background-video="video/bio.mp4">
+      <section class="stretch" data-background-video="video/bio_noaudio.mp4">
       </section>
       <section>
         <section>
