--- a/smartboard.html
+++ b/smartboard.html
@@ -99,7 +99,7 @@
         <blockquote>"The truth is that all men having power ought to be mistrusted."</blockquote>
       </section>
       <section>
-        <section>
+        <section data-state="clientcontrol">
           <h3>Swipe up and down on your screen to navigate the quotes, after you are done swipe right on your screen.</h3>
         </section>
         <section>
@@ -113,19 +113,72 @@
           <blockquote>"The truth is that all men having power ought to be mistrusted."</blockquote>
         </section>
       </section>
-      <section>
-        <h3>If you are done please wait patiently for everyone else to finish</h3>
+      <section data-state="mastercontrol">
+        <h3>Please wait for everyone to finish</h3>
       </section>
       <section>
+        <h2>Top 5</h2>
+        <p>(in no particular order)</p>
+      </section>
+      <section>
+        <h3>Treaty of Ghent</h3>
+        <p> The peace treaty that ended the War of 1812 between the United States and Great Britain.</p>
+      </section>
+      <section>
+        <h4>The War of 1812</h4>
+        <p>Madison was the first president that had to deal with a international threat and he succeded in protecting the united states and also obeying the Constitution</p>
+      </section>
+      <section>
+        <h4>Madison signs a bill for re-chartering a new national bank</h4>
+        <p>Madison signs a bill re-chartering a new national bank in Philadelphia. The charter is set for a twenty-one year term.</p>
+      </section>
+      <section>
+      <h4>How he went  about managing the War of 1812</h4>
+      <p>James Madison, unlike other presidents managed the war in a way that would follow the Constitution</p>
+      </section>
+      <section>
+        <h4>Washington is burned down</h4>
+        <p>James Madison was able to get his wife and him out of harms way before the british soldiers came and captured themn, they also saved many artifacts that are on display in washington today</p>
+      </section>
+      <section>
+         <section data-state="clientcontrol">
+          <h3>Swipe up and down on your screen to navigate the top 5, after you are done swipe right on your screen.</h3>
+        </section>
+      <section>
+      <h3>Treaty of Ghent</h3>
+        <p> The peace treaty that ended the War of 1812 between the United States and Great Britain.</p>
+      </section>
+      <section>
+        <h4>The War of 1812</h4>
+        <p>Madison was the first president that had to deal with a international threat and he succeded in protecting the united states and also obeying the Constitution</p>
+      </section>
+      <section>
+        <h4>Madison signs a bill for re-chartering a new national bank</h4>
+        <p>Madison signs a bill re-chartering a new national bank in Philadelphia. The charter is set for a twenty-one year term.</p>
+      </section>
+      <section>
+      <h4>How he went  about managing the War of 1812</h4>
+      <p>James Madison, unlike other presidents managed the war in a way that would follow the Constitution</p>
+      </section>
+      <section>
+        <h4>Washington is burned down</h4>
+        <p>James Madison was able to get his wife and him out of harms way before the british soldiers came and captured them, they also saved many artifacts that are on display in washington today</p>
+      </section>
+      </section>
+      <section data-state="mastercontrol">
+        <h3>Please wait for everyone to finish</h3>
+      </section>
+      <section>
+        <p>If you have ever seen James Madison on money you must be really lucky, he was featured on the $5,000 dollar bill, there is about 350 of these bills still in circulation</p>
+        </section>
         <h4>Did you know that James Madison was related to George Washington!</h4>
         <p>He is George Washington's nephew's wife's sister's husband.</p>
-      </section>
       </section>
       <section>
         <p>Louisiana (1812) and Kentucky (1816) joined the United States while he was in office. He served two terms then retired from his presidency and moved back to his plantation in Virginia.</p>
       </section>
       <section>
-        <audio data-autoplay src="audio/theme.mp3"></audio>
+      <audio data-autoplay src="audio/theme.mp3"></audio>
         <h2>Our Theme Song</h2>
       </section>
       <section class="stretch" data-background-video="video/bio.mp4">
@@ -150,6 +203,14 @@
         <p>George W Bush can be related to James Madison because he lead the United States into a war that could ultimately determine the fate of our nation just like James Madison did in the War of 1812</p>
 
       </section>
+            <section><h3>Our Test Question</h3></section>
+      <section>
+        <p>James Madison was this number president of the United States...</p>
+      </section>
+      <section><p>Did James Madison propose the Virginia Plan?</p></section>
+      <section><p>Did James Madison introduce the idea of Checks and Balances</p></section>
+      <section><p>Was James Madison one of the authors of the Federalists Papers?</p></section>
+      <section><p>What is James Madison known as being?</p></section>
     </div>
 
   </div>
