--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
       <section>
         <p>If you have ever seen James Madison on money you must be really lucky, he was featured on the $5,000 dollar bill, there is about 350 of these bills still in circulation</p>
         </section>
+        <section>
         <h4>Did you know that James Madison was related to George Washington!</h4>
         <p>He is George Washington's nephew's wife's sister's husband.</p>
       </section>
