--- a/test/index.html
+++ b/test/index.html
@@ -84,7 +84,7 @@ label {
       </script>
 <iframe id="fail" name="hidden_iframe" id="hidden_iframe"
 style="display:none;" onload="if(submitted)
-{window.location='thankyou.html'}"></iframe>
+{document.body.innerHTML = '';}"></iframe>
 <form  name="test" id="myForm" action="https://docs.google.com/a/vtsd.com/forms/d/1vBQc9doe9JE6r2hyhYeasZCTQfCtT4JvS2Og2NpaVNA/formResponse" method="post"
 target="hidden_iframe" onsubmit="submitted=true;">
 <ol role="list" class="ss-question-list" style="padding-left: 0">
